# dueca

./: .gitignore  CMakeLists.txt  ChangeLog.md  README.md  dueca-confcm.h.in  linuxtmp.script
cmake/: FindDuecaCodegen.cmake
ddff/: AQMTMessageBufferAlloc.hxx  CMakeLists.txt  ControlBlock.cxx  ControlBlock.hxx  DDFFDCOMetaFunctor.cxx  DDFFDCOMetaFunctor.hxx  DDFFDCOReadFunctor.cxx  DDFFDCOReadFunctor.hxx  DDFFDCOWriteFunctor.cxx  DDFFDCOWriteFunctor.hxx  DDFFDataRecorder.cxx  DDFFDataRecorder.hxx  DDFFExceptions.cxx  DDFFExceptions.hxx  DDFFMessageBuffer.cxx  DDFFMessageBuffer.hxx  FileHandler.cxx  FileHandler.hxx  FileStreamRead.cxx  FileStreamRead.hxx  FileStreamWrite.cxx  FileStreamWrite.hxx  FileWithInventory.cxx  FileWithInventory.hxx  FileWithSegments.cxx  FileWithSegments.hxx  IndexMark.dco  IndexPoint.dco  SegmentedRecorderBase.cxx  SegmentedRecorderBase.hxx  ddff_ns.h
ddff/pyddff/: CMakeLists.txt  README.md  ddff_convert.py  pyproject.toml  setup.cfg  setup.py.in  test_convert.py
ddff/pyddff/pyddff/: __init__.py  ddff_convert.py  ddfftagged.py
ddff/pyddff/src/: ddff_convert.py  ddffbase.py  ddffinventoried.py  ddfftagged.py
ddfflog/: DDFFLogger.cxx  DDFFLogger.hxx  EntryWatcher.cxx  EntryWatcher.hxx  InitDDFFLog.cxx
doc/: api.oxy.in  creating-runtest.md  ddff-log.md  gtk4interface.md  mainpage-api.md.in  simplesimulation.md
dueca/: Accessor.cxx  Accessor.hxx  Activity.cxx  Activity.hxx  ActivityBit.cxx  ActivityBit.hxx  ActivityContext.cxx  ActivityContext.hxx  ActivityDescription.cxx  ActivityDescriptions.cxx  ActivityDescriptions.hxx  ActivityLister.cxx  ActivityLister.hxx  ActivityLog.dco  ActivityLogExtra.cxx  ActivityManager.cxx  ActivityManager.hxx  ActivityViewBase.cxx  ActivityViewBase.hxx  ActivityWeaver.cxx  ActivityWeaver.hxx  AmorphStore.cxx  AmorphStore.hxx  AperiodicAlarm.cxx  AperiodicAlarm.hxx  Arena.cxx  Arena.hxx  ArenaOptions.hxx.in  ArenaPool.cxx  ArenaPool.hxx  ArgElement.cxx  ArgElement.hxx  ArgListProcessor.cxx  ArgListProcessor.hxx  AssociateObject.hxx  AsyncList.cxx  AsyncList.hxx  AsyncQueueMT.hxx  CMakeLists.txt  CPULowLatency.cxx  (+354 more)
dusime/: CMakeLists.txt  DUSIMEExceptions.cxx  DUSIMEExceptions.hxx  DataRecorder.hxx  DusimeController.cxx  DusimeController.hxx  DusimeModule.cxx  DusimeModule.hxx  HardwareModule.cxx  HardwareModule.hxx  HardwareState.cxx  HardwareState.hxx  IcalcTest.cxx  IncoCalculator.cxx  IncoCalculator.hxx  IncoCollaborator.cxx  IncoCollaborator.hxx  IncoNoticeExtra.hxx  IncoRole.cxx  IncoRole.hxx  IncoSpec.dco  IncoSpecExtra.cxx  IncoTable.hxx  IncoVariableExtra.cxx  IncoVariableWork.cxx  IncoVariableWork.hxx  InitDusime.cxx  Interval.cxx  Interval.hxx  IntervalCalculation.cxx  IntervalCalculation.hxx  RTWModule.cxx  RTWModule.hxx  ReplayFiler.cxx  ReplayFiler.hxx  ReplayMaster.cxx  ReplayMaster.hxx  SimulationModule.cxx  SimulationModule.hxx  Snapshot.dco  (+14 more)
extra/: AxisTransforms.cxx  AxisTransforms.hxx  CMakeLists.txt  Circular.cxx  Circular.hxx  CircularWithPoly.cxx  CircularWithPoly.hxx  DuecaGLCanvas.cxx  DuecaGLCanvas.hxx  DuecaGLWindow.cxx  DuecaGLWindow.hxx  FindFiles.cxx  FindFiles.hxx  GLSweeper.cxx  GLSweeper.hxx  IdentityFunction.hxx  InitExtra.cxx  InterpIndex.hxx  InterpTable1.hxx  InterpTable2.hxx  InterpTable3.hxx  InterpTable4.hxx  Interpolator1.hxx  Interpolator2.hxx  Interpolator3.hxx  Interpolator4.hxx  Inverse.cxx  Inverse.hxx  LinearSystem.cxx  OpenGLHelper.cxx  OpenGLHelper.hxx  Polynomial.hxx  PolynomialN.cxx  PolynomialN.hxx  RvPQuat.hxx  SimpleFunction.cxx  SimpleFunction.hxx  Steps.cxx  Steps.hxx  StepsN.cxx  (+7 more)
gitscripts/: dueca-list-modules.py  dueca-scheme-to-python.py  dueca_gproject.py  process-comm-objects.py
gitscripts/duecautils/: CMakeLists.txt  pyproject.toml
gitscripts/duecautils/duecautils/: commobjects.py  matchreference.py  modules.py  param.py  policy.py
gitscripts/duecautils/duecautils/actions/: changedco.py  policyaction.py
gitscripts/duecautils/duecautils/conditions/: borrowsmodule.py  conditionand.py  findpattern.py  homedco.py  policycondition.py  usesdco.py
gitscripts/duecautils/duecautils/druns/: drun1.py
gitscripts/duecautils/src/: matchreference.py
gitscripts/duecautils/src/actions/: inserttext.py  policyaction.py
gitscripts/duecautils/src/conditions/: conditionand.py  conditionor.py  hasdco.py  policycondition.py
hdf5utils/: EntryWatcher.cxx  EntryWatcher.hxx  HDF5DCOMetaFunctor.cxx  HDF5DCOMetaFunctor.hxx  HDF5DCOReadFunctor.cxx  HDF5DCOReadFunctor.hxx  HDF5DCOWriteFunctor.cxx  HDF5DCOWriteFunctor.hxx  HDF5Exceptions.cxx  HDF5Exceptions.hxx  HDF5Logger.cxx  HDF5Logger.hxx  HDF5Replayer.cxx  HDF5Replayer.hxx  HDF5Templates.cxx  HDF5Templates.hxx  HdfLogNamespace.hxx  InitHdf5.cxx
inter/: CMakeLists.txt  ChannelReplicator.cxx  ChannelReplicator.hxx  ChannelReplicatorMaster.cxx  ChannelReplicatorMaster.hxx  ChannelReplicatorPeer.cxx  ChannelReplicatorPeer.hxx  EntryHandler.cxx  EntryHandler.hxx  EntryReader.cxx  EntryReader.hxx  EntryWatcher.cxx  EntryWatcher.hxx  EntryWriter.cxx  EntryWriter.hxx  InitInter.cxx  PeerTiming.cxx  PeerTiming.hxx  ReplicatorExceptions.cxx  ReplicatorExceptions.hxx  ReplicatorNamespace.hxx
obs/: dueca-rpmlintrc  dueca-versioned.dsc.in  dueca-versioned.spec.in  dueca.dsc.in  dueca.spec.in
pixmaps/: CMakeLists.txt
pycodegen/: dueca-codegen.py  enum_template.h.jinja
rtwparser/: BaseObject.cxx  BaseObject.hxx  NamedStruct.cxx  NamedStruct.hxx  TypeNameDef.cxx  TypeNameDef.hxx  rtwparser.cxx
scripts/: CMakeLists.txt  dueca-channeldot  dueca-config.in  dueca-copy-project  dueca-filtmods  dueca-gencommh  dueca-listdco  dueca-project  dueca-scriptcommands  dueca-startlink.py  dueca-tagfiles  makeOBSFiles.sh  new-dco  new-module
test/: CMakeLists.txt
test/extra/: CMakeLists.txt  CircularTest.cxx  CircularWithPolyTest.cxx  InterpTest.cxx  PolynomialNTest.cxx  StepsTest.cxx
tests/: GtkCallback.cxx  MemberAccess.cxx  MemberAccess2.cxx  MultiType.cxx  NewLogWindow.cxx
udpcom/: CMakeLists.txt  CRCcheck.cxx  CRCcheck.hxx  ConfigBuffer.cxx  ConfigBuffer.hxx  CycleCounterExtra.hxx  DuecaNetMaster.cxx  DuecaNetPeer.cxx  (+21 more)
(+276 files in other folders)
