[project]
name = "pyddff"
version = "1.0.2"
description = "Pure python interface to reading ddff files"
readme = "README.md"
requires-python = ">=3.6"
authors = [
  { name = 'René van Paassen', email = 'rene.vanpaassen@gmail.com' }
  ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent" ]

license = "EUPL-1.2"

[project.scripts]
ddff-convert = "pyddff.ddff_convert:main"

[dependencies]
msgpack-python = "^1.0.3"
crcmod = "1.7"

[build-system]
requires = [
    "setuptools >= 44",
    "wheel",
    "h5py"
]
build-backend = "setuptools.build_meta"
