[project]
name = "pyddff"
version = "1.0.2"
description = "Pure python interface to reading ddff files"
readme = "README.md"
requires-python = ">=3.6"
authors = [
  { name = 'René van Paassen', email = 'rene.vanpaassen@gmail.com' }
  ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent" ]

license = "EUPL-1.2"
dependencies = [
  "msgpack>=1.0.3",
  "crcmod>=1.7",
  "h5py"
]

[project.scripts]
ddff-convert = "pyddff.ddff_convert:main"

[build-system]
requires = [
    "setuptools >= 66",
    "wheel"
]
build-backend = "setuptools.build_meta"
