[build-system]
requires = [
    "setuptools >= 44",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyddff"
authors = [
  { name = 'René van Paassen', email = 'rene.vanpaassen@gmail.com' }
]
version = "1.0.2"
description = "Pure python interface to reading ddff files"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: EUPL License",
    "Operating System :: OS Independent" ]
dependencies = [
  "msgpack>=1.0.3",
  "crcmod>=1.7",
  "h5py"
]

[project.scripts]
ddff-convert = "pyddff.ddff_convert:main"