[build-system]
requires = [
    "setuptools >= 44",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "duecautils"
authors = [
  {name="René van Paassen", email="rene.vanpaassen@gmail.com"}
]
version = "0.9"
description = "Support modules for manipulating DUECA projects"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: EUPL License",
    "Operating System :: OS Independent" ]
dependencies = [
  "lxml>=3.0.0",
  "git>=2017.0.0"
]
